--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -141,20 +141,44 @@
         "for num in  list(range (1,13)):          \n",
         "  for num2 in  list(range (1,8)):  \n",
         "    for ciclo in list(range(len(X[:,0]))):  \n",
-        "      if X[ciclo,1] == num and X[ciclo,2] == num2 :              \n",
+        "      if X[ciclo,1] == num and X[ciclo,2] == 1 :              \n",
         "        c1.append(1)\n",
         "      else:    \n",
-        "        c1.append(0)  \n",
+        "        c1.append(0) \n",
+        "      if X[ciclo,1] == num and X[ciclo,2] == 2 :              \n",
+        "        c2.append(1)\n",
+        "      else:    \n",
+        "        c2.append(0) \n",
+        "      if X[ciclo,1] == num and X[ciclo,2] == 3 :              \n",
+        "        c3.append(1)\n",
+        "      else:    \n",
+        "        c3.append(0) \n",
+        "      if X[ciclo,1] == num and X[ciclo,2] == 4 :              \n",
+        "        c4.append(1)\n",
+        "      else:    \n",
+        "        c4.append(0)\n",
+        "      if X[ciclo,1] == num and X[ciclo,2] == 5 :              \n",
+        "        c5.append(1)\n",
+        "      else:    \n",
+        "        c5.append(0)\n",
+        "      if X[ciclo,1] == num and X[ciclo,2] == 6 :              \n",
+        "        c6.append(1)\n",
+        "      else:    \n",
+        "        c6.append(0)\n",
+        "      if X[ciclo,1] == num and X[ciclo,2] == 7 :              \n",
+        "        c7.append(1)\n",
+        "      else:    \n",
+        "        c7.append(0)\n",
         "\n",
         "c1  = np.array(c1 )[:,np.newaxis]\n",
-        "#c2  = np.array(c2 )[:,np.newaxis]\n",
-        "#c3  = np.array(c3 )[:,np.newaxis]\n",
-        "#c4  = np.array(c4 )[:,np.newaxis]\n",
-        "#c5  = np.array(c5 )[:,np.newaxis]\n",
-        "#c6  = np.array(c6 )[:,np.newaxis]\n",
-        "#c7  = np.array(c7 )[:,np.newaxis]"
+        "c2  = np.array(c2 )[:,np.newaxis]\n",
+        "c3  = np.array(c3 )[:,np.newaxis]\n",
+        "c4  = np.array(c4 )[:,np.newaxis]\n",
+        "c5  = np.array(c5 )[:,np.newaxis]\n",
+        "c6  = np.array(c6 )[:,np.newaxis]\n",
+        "c7  = np.array(c7 )[:,np.newaxis]"
       ],
-      "execution_count": 83,
+      "execution_count": 85,
       "outputs": []
     },
     {
