--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -90,12 +90,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0JYqth2Ty8-k",
-        "outputId": "2747af22-5643-49d9-9bae-316796c0a8bd",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        }
+        "id": "0JYqth2Ty8-k"
       },
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/BAJAS.txt',delimiter='~')\n",
@@ -103,46 +98,27 @@
         "Y  = data.iloc[:,3]\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 105,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
-            "  after removing the cwd from sys.path.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MiIJ5e4i0qpH",
-        "outputId": "f21d059e-a880-4d6f-bae3-b1fd5ec07a3f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "QPiEAS12FL2z"
       },
       "source": [
-        "len(X)"
+        "x_año = [] # año\n",
+        "x_mes = [] # mes\n",
+        "\n",
+        "for ciclo in X[:,0]:\n",
+        "  x_mes.append(X[:,0])    \n",
+        "  x_año.append(X[:,1])     \n",
+        "   \n",
+        "x_año = np.array(x_año)[:,np.newaxis]\n",
+        "x_mes = np.array(x_mes)[:,np.newaxis]"
       ],
-      "execution_count": 106,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "132"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 106
-        }
-      ]
+      "execution_count": 118,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -151,6 +127,7 @@
       },
       "source": [
         "c1,c2,c3,c4,c5,c6,c7 = [],[],[],[],[],[],[]\n",
+        "\n",
         "Anio= 2019\n",
         "for num in  list(range (1,13)):          \n",
         "  for num2 in  list(range (1,8)):  \n",
