--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 3,
+      "execution_count": 147,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "7c648a9c-d45f-407a-ad09-92dd931d2df7",
+        "outputId": "b8a6aa65-a2e7-4a3f-fe77-27cb1f7300db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -76,7 +76,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 5,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0JYqth2Ty8-k"
+        "id": "0JYqth2Ty8-k",
+        "outputId": "e696e64b-212b-4995-b28b-0a95507a48a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
       },
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/BAJAS.txt',delimiter='~')\n",
@@ -98,27 +103,17 @@
         "Y  = data.iloc[:,3]\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QPiEAS12FL2z"
-      },
-      "source": [
-        "x_año = [] # año\n",
-        "x_mes = [] # mes\n",
-        "\n",
-        "for ciclo in X[:,0]:\n",
-        "  x_mes.append(X[:,0])    \n",
-        "  x_año.append(X[:,1])     \n",
-        "   \n",
-        "x_año = np.array(x_año)[:,np.newaxis]\n",
-        "x_mes = np.array(x_mes)[:,np.newaxis]"
-      ],
-      "execution_count": 118,
-      "outputs": []
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:4: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
+            "  after removing the cwd from sys.path.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -129,34 +124,32 @@
         "c1,c2,c3,c4,c5,c6,c7 = [],[],[],[],[],[],[]\n",
         "\n",
         "Anio= 2019\n",
-        "for num in  list(range (1,13)):          \n",
-        "  for num2 in  list(range (1,8)):  \n",
-        "    for ciclo in list(range(len(X[:,0]))):  \n",
-        "      if X[ciclo,1] == num and X[ciclo,2] == 1 and X[ciclo,0] == Anio:              \n",
+        "for ciclo in list(range(len(X[:,0]))):  \n",
+        "      if X[ciclo,2] == 1 and X[ciclo,0] == Anio:              \n",
         "        c1.append(1)\n",
         "      else:    \n",
         "        c1.append(0) \n",
-        "      if X[ciclo,1] == num and X[ciclo,2] == 2 and X[ciclo,0] == Anio:                \n",
+        "      if X[ciclo,2] == 2 and X[ciclo,0] == Anio:                \n",
         "        c2.append(1)\n",
         "      else:    \n",
         "        c2.append(0) \n",
-        "      if X[ciclo,1] == num and X[ciclo,2] == 3 and X[ciclo,0] == Anio:                \n",
+        "      if X[ciclo,2] == 3 and X[ciclo,0] == Anio:                \n",
         "        c3.append(1)\n",
         "      else:    \n",
         "        c3.append(0) \n",
-        "      if X[ciclo,1] == num and X[ciclo,2] == 4 and X[ciclo,0] == Anio:                \n",
+        "      if X[ciclo,2] == 4 and X[ciclo,0] == Anio:                \n",
         "        c4.append(1)\n",
         "      else:    \n",
         "        c4.append(0)\n",
-        "      if X[ciclo,1] == num and X[ciclo,2] == 5 and X[ciclo,0] == Anio:                \n",
+        "      if X[ciclo,2] == 5 and X[ciclo,0] == Anio:                \n",
         "        c5.append(1)\n",
         "      else:    \n",
         "        c5.append(0)\n",
-        "      if X[ciclo,1] == num and X[ciclo,2] == 6 and X[ciclo,0] == Anio:                \n",
+        "      if X[ciclo,2] == 6 and X[ciclo,0] == Anio:                \n",
         "        c6.append(1)\n",
         "      else:    \n",
         "        c6.append(0)\n",
-        "      if X[ciclo,1] == num and X[ciclo,2] == 7 and X[ciclo,0] == Anio:                \n",
+        "      if X[ciclo,2] == 7 and X[ciclo,0] == Anio:                \n",
         "        c7.append(1)\n",
         "      else:    \n",
         "        c7.append(0)\n",
@@ -169,41 +162,64 @@
         "c6  = np.array(c6 )[:,np.newaxis]\n",
         "c7  = np.array(c7 )[:,np.newaxis]"
       ],
-      "execution_count": 108,
+      "execution_count": 168,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "zUSrtSrO-Rf-",
-        "outputId": "137af63a-beb1-4255-89a1-8dd5f429edaa",
+        "outputId": "7ee0903c-5f0c-423a-84bc-7f8ff49397a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 134
+          "height": 34
         }
       },
       "source": [
-        "X[ c1[:,0]]"
+        "len(c1)"
       ],
-      "execution_count": 109,
+      "execution_count": 169,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[2019,    1,    3],\n",
-              "       [2019,    1,    3],\n",
-              "       [2019,    1,    3],\n",
-              "       ...,\n",
-              "       [2019,    1,    3],\n",
-              "       [2019,    1,    3],\n",
-              "       [2019,    1,    3]])"
+              "132"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 109
+          "execution_count": 169
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VvPVf8PHMrlc",
+        "outputId": "b4cf9978-5164-42f6-8f58-492e057b27e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "len(Y)"
+      ],
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "132"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 173
         }
       ]
     },
@@ -211,7 +227,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "oDKLYZdIhGDl",
-        "outputId": "ea8c81e6-e82b-417b-ae18-053efc8dae8d",
+        "outputId": "b3e928b2-9e82-49a5-e04d-6b04cb3a41ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 639
@@ -229,14 +245,21 @@
         "\n",
         "color_={0:\"Black\",1:\"tomato\",2:\"fuchsia\",3:\"darkcyan\",4:\"Blue\",5:\"purple\",6:\"Green\"}\n",
         "fig, ax = plt.subplots()\n",
-        "ax.scatter(c1[:,0]==1,Y,c= color_[0], marker = \"^\",label = ciclo,alpha=0.5)    \n",
-        "   \n",
+        "for ciclo in list(range (2019,2021)):     \n",
+        "  if ciclo == 2019:  \n",
+        "    ax.scatter(\n",
+        "    x_mes[ c1[:,0]==1,0],\n",
+        "    Y[ c1[:,0]==1,0],\n",
+        "    c= color_[0],\n",
+        "    marker = \"^\",\n",
+        "    label = ciclo,\n",
+        "    alpha=0.5) \n",
         "plt.xlabel('Mes')\n",
         "plt.ylabel('Cantidad')\n",
         "plt.title('Bajas por antiguedad')\n",
         "plt.show()\n"
       ],
-      "execution_count": 117,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "error",
@@ -245,7 +268,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-117-d891a3230e23>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mcolor_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"Black\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"tomato\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"fuchsia\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"darkcyan\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"Blue\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"purple\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"Green\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mcolor_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"^\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mciclo\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Mes'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-174-28b58bd09f8e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mmarker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"^\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mciclo\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     alpha=0.5) \n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Mes'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cantidad'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/matplotlib/__init__.py\u001b[0m in \u001b[0;36minner\u001b[0;34m(ax, data, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1563\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0minner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1564\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1565\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msanitize_sequence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1566\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1567\u001b[0m         \u001b[0mbound\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_sig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/matplotlib/cbook/deprecation.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    356\u001b[0m                 \u001b[0;34mf\"%(removal)s.  If any parameter follows {name!r}, they \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    357\u001b[0m                 f\"should be pass as keyword, not positionally.\")\n\u001b[0;32m--> 358\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    359\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    360\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/matplotlib/axes/_axes.py\u001b[0m in \u001b[0;36mscatter\u001b[0;34m(self, x, y, s, c, marker, cmap, norm, vmin, vmax, alpha, linewidths, verts, edgecolors, plotnonfinite, **kwargs)\u001b[0m\n\u001b[1;32m   4389\u001b[0m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4390\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4391\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"x and y must be the same size\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4392\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4393\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
