--- a/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v4.ipynb
@@ -50,7 +50,7 @@
         "auth.authenticate_user()\n",
         "gc = gspread.authorize (GoogleCredentials.get_application_default())"
       ],
-      "execution_count": 147,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -66,17 +66,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "y_VVpj56uzRV",
-        "outputId": "b8a6aa65-a2e7-4a3f-fe77-27cb1f7300db",
+        "outputId": "07c171bc-2911-4dad-a98d-d56d16fd8e91",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 55
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 148,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,19 +91,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "0JYqth2Ty8-k",
-        "outputId": "e696e64b-212b-4995-b28b-0a95507a48a9",
+        "outputId": "67751750-31ed-4e32-8e18-76aa0b45d4e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 72
         }
       },
       "source": [
         "data = pd.read_csv('/content/drive/My Drive/Dataset/BAJAS.txt',delimiter='~')\n",
         "X  = data.iloc[:,:-1].values\n",
-        "Y  = data.iloc[:,3]\n",
+        "Y  = data.iloc[:,9]\n",
         "Y = Y[:,np.newaxis]"
       ],
-      "execution_count": 160,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,6 +112,35 @@
             "  after removing the cwd from sys.path.\n"
           ],
           "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SKroeJSlQx_H",
+        "outputId": "34a721c0-74f5-46d9-8934-5ebb0b701a9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "data.shape"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(19, 10)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
         }
       ]
     },
@@ -172,7 +201,7 @@
         "outputId": "40297495-6738-4283-eed1-6d68ffd285be",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
@@ -201,7 +230,7 @@
         "outputId": "cd8f1c41-610a-45fa-ee29-3984dc68103c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
@@ -230,7 +259,7 @@
         "outputId": "9485631b-433c-4abe-f1f3-a84a1ce5f41c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
@@ -353,17 +382,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "EEuISC0US_XT"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
